@@ -1,6 +1,7 @@
 12/3/13 started 7.32.2
 - removed some left-over debugging code from configure.ac
 - better error messages from vips.c
+- fix demand hints so "vips shrink" works again, thanks Jan
 
 6/2/13 started 7.32.1
 - fix --without-lcms, thanks speckins
